# Steadfast8897

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  EMBY_COMPAT_ROUTES.md  EmbyAPIforEM.md  README.md  docker-compose.yml  emby-api-compatibility-report.md  emby-api-fix-plan.md  go.mod  go.sum  main.go  sqlc.yaml  刮削优化方案.md  剧集优化与画质标签方案.md
.github/workflows/: ci.yml  release.yml  (+1 more)
docs/: recover_disabled_users.sql
migrations/: 001_init.sql  002_user_management.sql  003_metadata.sql  004_media_versions.sql  005_mediainfo_json.sql  006_scan_threads.sql  007_dedup.sql  008_api_keys.sql  009_playback_activity.sql  010_playback_activity_extra.sql  011_playback_activity_view.sql  012_homepage_indexes.sql  013_resolved_path.sql  014_library_images.sql  015_updated_at_index.sql  016_emby_password.sql  017_emby_id.sql  018_gateway_config.sql  019_studio_platform.sql  020_library_sort_order.sql  021_platform_scan_state.sql  022_tmdb_dedup_index.sql  023_item_merge.sql  024_policy_folders.sql  025_proxy_accounts.sql  026_items_type_sort_index.sql  027_identify_cooldown.sql  028_item_external_ids.sql  029_identify_candidates.sql  030_media_version_quality.sql  031_task_runs.sql  032_drop_items_name_unique.sql  033_series_file_path_index.sql  034_slim_gateway_log_indexes.sql  035_scrape_queue.sql  036_drop_identify_cooldown.sql  037_scrape_queue_diag.sql  038_libraries_deleted_at.sql  039_library_scrape_config.sql  040_remove_scrape_strategy.sql  (+44 more)
scripts/: check-sql-boundaries.ps1  fetch-fonts.sh
src/: auth.rs  config.rs  db.rs  emby_compat.rs  error.rs  main.rs  state.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+647 files in other folders)
