[package]
name = "fyms-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth & crypto
bcrypt = "0.16"
uuid = { version = "1", features = ["v4", "serde"] }
md5 = "0.7"
rand = "0.9"
hex = "0.4"

# HTTP client (TMDB)
reqwest = { version = "0.12", features = ["json", "socks", "rustls-tls"], default-features = false }

# Image processing
image = "0.25"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"
regex = "1"
once_cell = "1"
dashmap = "6"
moka = { version = "0.12", features = ["future"] }
thiserror = "2"
anyhow = "1"

# XML parsing (NFO)
quick-xml = "0.37"
urlencoding = "2.1.3"
sha1 = "0.10"
serde_urlencoded = "0.7"
local-ip-address = "0.6.10"
tokio-util = { version = "0.7.18", features = ["io"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
